# rclone-decrypt

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build_app.yml  main.yml  pypi.yml  test.yml
src/rclone_decrypt/: cli.py  decrypt.py  gui.py  rclone.py
tests/: generate_encrypted_files.sh  rclone_decrypt.conf  rclone_encrypt.conf  test_rclone_decrypt.py
tests/raw_files/: file4.txt
tests/raw_files/sub_folder/: file0.txt  file1.txt  file2.txt  file3.txt
