[tool.poetry]
name = "rclone_decrypt"
version = "0.1.0"
description = ""
authors = ["Mitchell Thompkins <mitchell.thompkins@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
click = "^8.1.3"
python-rclone = "^0.0.2"
python-statemachine = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rclone-decrypt = "rclone_decrypt.cli:cli"
