[tool.poetry]
name = "rclone_decrypt"
version = "0.2.0"
description = "Wrapper around rclone to decrypt files encrypted with rclone"
authors = ["Mitchell Thompkins <mitchell.thompkins@gmail.com>"]
license = "MIT"

repository = "https://github.com/MitchellThompkins/rclone-decrypt"

# README file(s) are used as the package description
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = "^8.1.3"
python-statemachine = "^2.0.0"
flet = "0.21.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
flake8 = "^6.0.0"
black = "23.12.1"
isort = "^5.13.2"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rclone-decrypt = "rclone_decrypt.cli:cli"
